💄 Fixing an overflow issue

--- a/src/components/AverageSessionDuration/style.css
+++ b/src/components/AverageSessionDuration/style.css
@@ -3,6 +3,7 @@
   height: 260px;
   background-color: #FF0000;
   border-radius: 15px;
+  overflow: hidden;
 }
 
 .legend {
